fixed spacing on inbox page

--- a/static/inbox.css
+++ b/static/inbox.css
@@ -10,7 +10,6 @@ body {
     max-width: 75rem;
     width: 100%;
     gap: 1.5rem;
-    margin-bottom: 2rem;
 }
 
 .content-wrapper { 
@@ -437,6 +436,7 @@ body {
     text-align: center;
     font-family: 'Figtree', sans-serif;
     transition: background 0.5s ease, box-shadow 0.5s ease;
+    margin-top: -5rem;
 }
 
 .quick-actions-notifications h2 {
@@ -456,6 +456,7 @@ body {
     font-weight: bold;
     margin-bottom: 0.75rem;
     color: #2d536f;
+    margin-bottom: -2rem;
 }
 
 .quick-action-btn,
@@ -469,6 +470,7 @@ body {
     font-weight: 500;
     text-align: center;
     transition: background 0.5s ease, transform 0.3s;
+    margin-bottom: -7rem;
 }
 
 .quick-actions-buttons .quick-action-btn:hover {
